aliases fix, itemfood partially implemented, less messages